Dylans Commit of Profile database.

--- a/app/views/page/profile.html.erb
+++ b/app/views/page/profile.html.erb
@@ -4,6 +4,7 @@
 
   <h1>Page#navigate</h1>
   <p>Find me in app/views/page/Profile.html.erb</p>
-
+    <%=  @profile.fullName  %>
+    <%=  @profile.email  %>
 </div>
 </div>
