Added Devise Database - Pages not tested yet

--- a/app/views/shared/_main_navigation.html.erb
+++ b/app/views/shared/_main_navigation.html.erb
@@ -2,7 +2,7 @@
   <div class="header">
 
 <div class="row">
-  <div class="columns large-12  header-logo"> <a href="index.html"> <%= image_tag("logo.png", alt:"") %></a> </div>
+  <div class="columns large-12  header-logo"> <a href="home.html"> <%= image_tag("logo.png", alt:"") %></a> </div>
   <div class="columns large-12">
 
 
