--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tags %>
 
   <meta charset="utf-8">
+
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
 </head>
 <body>
 
