--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -37,14 +37,14 @@
             <li class="columns large-4">
                 <div class="img-wrapper">
 
-                <%= image_tag("logo.png", alt:"", class:"th about-image")%>
+                <%= image_tag("ShellyM_opt.jpg", alt:"", class:"th about-image")%>
               </div>
               <h3 class="employer-name">Shelly</h3>
               <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat porro voluptatem</p>
             </li>
             <li class="columns large-4">
               <div class="img-wrapper">
-                <%= image_tag("logo.png", alt:"", class:"th about-image")%>
+                <%= image_tag("DragonGreen.png", alt:"", class:"th about-image")%>
               </div>
               <h3 class="employer-name">Dylan</h3>
               <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat volupt porro atem</p>
