--- a/app/views/shared/_main_navigation.html.erb
+++ b/app/views/shared/_main_navigation.html.erb
@@ -15,7 +15,7 @@
 
           <li><%= link_to 'HOME', page_home_path %></li>
           <li><%= link_to 'ABOUT US' , page_about_path%></li>
-
+          <li><%= link_to 'Login' , new_user_session_path%></li>
           <li><%= link_to 'PROFILE' , page_profile_path%></li>
 
             <ul class="dropdown">
