--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,7 @@
+
+<div class="header">
+
+  <div class="row">
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -27,3 +31,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+</div>
