--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -10,7 +10,7 @@ body{
  color: #5d5151;
  font-family:'Droid Sans', serif;
  background-color: #f6f6f6;
- background-image: url('../../../../DreamzBank%20Free%20Website%20Template%20-%20Free-CSS.com/dreamzbank/images/bg.png');
+ background-image: url('bg.png');
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -25,7 +25,7 @@ h1.title{
     font-size: 1.4em;
     font-weight: bold;
     line-height: .75em;
-    /*background: url('../images/dividerbg.png');*/
+    /*background-image: url('../images/dividerbg.png');*/
     margin-bottom: 40px;
     
 }
@@ -40,7 +40,7 @@ h1.service-title{
     text-transform: uppercase;
     color: #8a2828;
     font-size: 1.4em;
-    font-weight: normals;
+    font-weight: normal;
     line-height: 1.5em;    
     margin-bottom: 20px;
 }
@@ -65,7 +65,7 @@ h2.sub-title {
 }
 
 input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], textarea {
-    padding: 15px 10px;
+    padding: 0px 10px;
 }
 
 ::selection{
@@ -160,14 +160,17 @@ p{
 }
 .sf-menu{    
     margin-bottom: 0;
-    background:#007ebf url('../../../../DreamzBank%20Free%20Website%20Template%20-%20Free-CSS.com/dreamzbank/images/menubg.png') repeat-x top;
+    /* sm???*/
+    background-color: #007ebf;
+    background-image: url('menubg.png');
+    background-repeat: repeat-x;
     padding-left: 10px;
     padding-right: 10px;
     border:1px solid #000;
 }
 
 .sf-menu li{
-    background: url('../../../../DreamzBank%20Free%20Website%20Template%20-%20Free-CSS.com/dreamzbank/images/menubg.png');
+    background-image: url('menubg.png');
     border-right: 1px solid #000;
 }
 .sf-menu li:last-child{
@@ -313,14 +316,14 @@ div.service-box .service h1{
 }
 
 .flexcar .flex-direction-nav .flex-next{
-   background: url('../../../../DreamzBank%20Free%20Website%20Template%20-%20Free-CSS.com/dreamzbank/images/testnav.png') 0 8px no-repeat;
+   background: url('testnav.png') 0 8px no-repeat;
    padding: 2px 10px;
    cursor: pointer;
    margin-left: 5px;   
 }
 
 .flexcar .flex-direction-nav .flex-prev{
-   background: url('../../../../DreamzBank%20Free%20Website%20Template%20-%20Free-CSS.com/dreamzbank/images/testnav.png') 5px -22px no-repeat;
+    background: url('testnav.png') 5px -22px no-repeat;
    padding: 2px 10px;
    cursor: pointer;
    margin-bottom: 8px;
@@ -374,7 +377,7 @@ p.test-credit .name{
 .testimonial{
    padding-left: 70px;
    margin-bottom: 1.5em;
-   background: url('../../../../DreamzBank%20Free%20Website%20Template%20-%20Free-CSS.com/dreamzbank/images/quote.png') no-repeat;
+    background: url('quote.png') no-repeat;
    min-height: 8em;
 }
 /***********about**************/
@@ -450,7 +453,7 @@ p.test-credit .name{
 
 /*******footer**********/
 footer.footer{
-    background: url('footerbg.png');
+    background-image: url('footerbg.png');
     padding: 20px 0 20px 0;
     color: #c5c5c5;
 }
@@ -503,19 +506,19 @@ a.media{
    margin-right: 10px;
 }
 .tweeter{
-   background: url('../../../../DreamzBank%20Free%20Website%20Template%20-%20Free-CSS.com/dreamzbank/images/social-media.png') 0 -2px no-repeat;
+   background: url('social-media.png') 0 -2px no-repeat;
 }
 
 .youtube{
-   background: url('../../../../DreamzBank%20Free%20Website%20Template%20-%20Free-CSS.com/dreamzbank/images/social-media.png') 0 -28px no-repeat;
+    background: url('social-media.png') 0 -28px no-repeat;
 }
 
 .facebook{
-   background: url('../../../../DreamzBank%20Free%20Website%20Template%20-%20Free-CSS.com/dreamzbank/images/social-media.png') 0 -52px no-repeat;
+    background: url('social-media.png') 0 -52px no-repeat;
 }
 
 .gmail{
-   background: url('../../../../DreamzBank%20Free%20Website%20Template%20-%20Free-CSS.com/dreamzbank/images/social-media.png') 0 -77px no-repeat;
+    background: url('social-media.png') 0 -77px no-repeat;
 }
 
 .address-details{
@@ -540,7 +543,7 @@ span.small-icon{
 }
 
  .useful-links ul li{
-   background: /*url('../images/bullet.png')*/ no-repeat 0;
+   background: /*url('../images/bullet.png')*/ no-repeat 0; /*sm???*/
    padding-left:20px;
  }
 
