--- a/app/views/page/services.html.erb
+++ b/app/views/page/services.html.erb
@@ -63,7 +63,7 @@
 
 </div>
 </div>
-<script src="js/jquery.min.js"></script>
+<!--<script src="js/jquery.min.js"></script>
 <script src="js/hoverIntent.js"></script>
 <script src="js/superfish.js"></script>
 <script>
@@ -92,5 +92,5 @@
             }, "slow");
         });
     });
-</script>
+</script>-->
 </body>
