--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,6 @@
-<div class="header">
+<div class="wrapper">
+
+  <div class="header">
 
   <div class="row">
 <h2>Resend confirmation instructions</h2>
@@ -18,4 +20,5 @@
 
 <%= render "devise/shared/links" %>
 </div>
+  </div>
   </div>
