--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,6 @@
-<div class="header">
+<div class="wrapper">
+
+  <div class="header">
 
   <div class="row">
 
@@ -29,3 +31,4 @@
     <%= render "devise/shared/links" %>
   </div>
 </div>
+  </div>
