--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,6 @@
-<div class="header">
+<div class="wrapper">
+
+  <div class="header">
 
   <div class="row">
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
@@ -42,3 +44,4 @@
 <%= link_to "Back", :back %>
 </div>
  </div>
+  </div>
