--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
+<div class="wrapper">
 
-<div class="header">
+  <div class="header">
 
   <div class="row">
 <h2>Sign up</h2>
@@ -33,3 +34,4 @@
 <%= render "devise/shared/links" %>
 </div>
 </div>
+  </div>
