--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,8 +1,11 @@
-<div class="header">
+<div class="wrapper">
+
+  <div class="header">
+
 
   <div class="row">
 <p>Hello <%= @resource.email %>!</p>
 
 <p>We're contacting you to notify you that your password has been changed.</p>
 </div>
-  </div>
+  </div></div>
