--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,4 +1,7 @@
-<div class="header">
+<div class="wrapper">
+
+  <div class="header">
+
 
   <div class="row">
 <p>Hello <%= @resource.email %>!</p>
@@ -9,4 +12,5 @@
 
 <p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
 </div>
+  </div>
   </div>
