--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,8 +25,8 @@
 #login
 {
     position: absolute;
-    top: -120%;
-    left: 78%;
+    top: 102%;
+    left: 92%;
     font-size: 2em;
 }
 
@@ -36,3 +36,22 @@
     font-size: 1.4em;
     text-align: center;
 }
+
+
+#axis:hover .move-left
+{
+    transform: translate(-900px,0);
+    -webkit-transform: translate(-850px,0);
+    -o-transform: translate(-900px,0);
+    -moz-transform: translate(-900px,0);
+    -webkit-transition: 1s ease;
+    -moz-transition: 1s ease;
+    -o-transition: 1s ease;
+    -ms-transition: 1s ease;
+}
+ #axis
+ {
+     width:20%;
+     height:20%;
+     float:right;
+ }
