--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= form_for(@profile) do |f| %>
   <% if @profile.errors.any? %>
     <div id="error_explanation">
@@ -10,7 +11,7 @@
       </ul>
     </div>
   <% end %>
-
+    <div id="pagewrap">
   <div class="field">
     <%= f.label :fullname %><br>
     <%= f.text_field :fullname %>
@@ -58,4 +59,5 @@
   <div class="actions">
     <%= f.submit %>
   </div>
+      </div>
 <% end %>
