--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Profile</h1>
 
+<div id="pagewrap">
+  <h1>Editing Profile</h1>
 <%= render 'form' %>
 
 <%= link_to 'Show', @profile %> |
 <%= link_to 'Back', profiles_path %>
+</div>
