Heck of a time getting Terry's changes merged

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -11,51 +11,53 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :fullname %><br>
-    <%= f.text_field :fullname %>
-  </div>
-  <div class="field">
-    <%= f.label :age %><br>
-    <%= f.number_field :age %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :major %><br>
-    <%= f.text_field :major %>
-  </div>
-  <div class="field">
-    <%= f.label :gender %><br>
-    <%= f.check_box :gender %>
-  </div>
-  <div class="field">
-    <%= f.label :schoolName %><br>
-    <%= f.text_field :schoolName %>
-  </div>
-  <div class="field">
-    <%= f.label :smoke %><br>
-    <%= f.check_box :smoke %>
-  </div>
-  <div class="field">
-    <%= f.label :pet %><br>
-    <%= f.check_box :pet %>
-  </div>
-  <div class="field">
-    <%= f.label :drive %><br>
-    <%= f.check_box :drive %>
-  </div>
-  <div class="field">
-    <%= f.label :bio %><br>
-    <%= f.text_area :bio %>
-  </div>
-  <div class="field">
-    <%= f.label :avatar %><br>
-    <%= f.text_field :avatar %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div id="pagewrap">
+      <div class="field">
+        <%= f.label :fullname %><br>
+        <%= f.text_field :fullname %>
+      </div>
+      <div class="field">
+        <%= f.label :age %><br>
+        <%= f.number_field :age %>
+      </div>
+      <div class="field">
+        <%= f.label :email %><br>
+        <%= f.text_field :email %>
+      </div>
+      <div class="field">
+        <%= f.label :major %><br>
+        <%= f.text_field :major %>
+      </div>
+      <div class="field">
+        <%= f.label :gender %><br>
+        <%= f.check_box :gender %>
+      </div>
+      <div class="field">
+        <%= f.label :schoolName %><br>
+        <%= f.text_field :schoolName %>
+      </div>
+      <div class="field">
+        <%= f.label :smoke %><br>
+        <%= f.check_box :smoke %>
+      </div>
+      <div class="field">
+        <%= f.label :pet %><br>
+        <%= f.check_box :pet %>
+      </div>
+      <div class="field">
+        <%= f.label :drive %><br>
+        <%= f.check_box :drive %>
+      </div>
+      <div class="field">
+        <%= f.label :bio %><br>
+        <%= f.text_area :bio %>
+      </div>
+      <div class="field">
+        <%= f.label :avatar %><br>
+        <%= f.text_field :avatar %>
+      </div>
+      <div class="actions">
+        <%= f.submit %>
+      </div>
   </div>
 <% end %>
