Adding Dylans venom pic and fixing gender

--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -12,6 +12,15 @@ body {
   color: #666;
 }
 
+div.field.gender-field {
+  display: inline;
+}
+
+div.field.gender-field label {
+  display: inline;
+}
+
+
 /* STRUCTURE */
 
 #pagewrap {
