Avatars now showing

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -9,8 +9,8 @@
   <section id="content">
     <h1> Personal Information</h1>
     <p>
-      <strong>Avatar:</strong>
-      <%= @profile.avatar %>
+      <!--<strong>Avatar:</strong>-->
+      <%= image_tag(@profile.avatar ) %>
     </p>
     <p>
       <strong>Fullname:</strong>
