--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -41,6 +41,11 @@ header {
   padding: 5px 15px;
 }
 
+#content img {
+  width: 25%;
+  height: auto;
+}
+
 #middle {
   width: 294px; /* Account for margins + border values */
   float: left;
