Adding edits from meeting 2/16

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,7 +1,6 @@
-<p id="notice"><%= notice %></p>
+<!--<p id="notice"><%#= notice %></p>-->
 
-<div id="pagewrap">
-
+<div class="row">
   <header>
     <h1> Personal Profile</h1>
   </header>
@@ -75,7 +74,7 @@
     </p>
   </aside>
   <%= link_to 'Edit', edit_profile_path(@profile) %> |
-  <%= link_to 'Back', profiles_path %>
+  <%= link_to 'Back', page_home_path %>
 
 
 </div>
