--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@profile) do |f| %>
+<%= form_for @profile, html: { multipart: true } do |f| %>
   <% if @profile.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@profile.errors.count, "error") %> prohibited this profile from being saved:</h2>
@@ -57,10 +57,14 @@
         <%= f.label :bio %><br>
         <%= f.text_area :bio %>
       </div>
-      <div class="field">
-        <%= f.label :avatar %><br>
-        <%= f.text_field :avatar %>
-      </div>
+      <!--<div class="field">-->
+        <%#= f.label :avatar %><br>
+        <!--<%#= f.text_field :avatar %>-->
+      <!--</div>-->
+    <div class="field">
+      <%= f.label :photo %><br>
+      <%= f.file_field :photo %>
+    </div>
       <div class="actions">
         <%= f.submit %>
       </div>
