--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -7,6 +7,13 @@
 
 /* STRUCTURE */
 
+div.field.gender-field {
+  display: inline;
+}
+
+div.field.gender-field label {
+  display: inline;
+}
 
 #content {
   width: 290px;
