--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -10,23 +10,27 @@
       </ul>
     </div>
   <% end %>
-
-  <div id="pagewrap">
+    <h2>Edit Your Profile Settings</h2>
       <div class="field">
-        <%= f.label :fullname %><br>
+        <%= f.label :major %>
+        <%= f.text_field :major %>
+        <%= f.label :fullname %>
         <%= f.text_field :fullname %>
-      </div>
-      <div class="field">
-        <%= f.label :age %><br>
+
+        <%= f.label :age %>
         <%= f.number_field :age %>
-      </div>
-      <div class="field">
-        <%= f.label :email %><br>
+
+        <%= f.label :email %>
         <%= f.text_field :email %>
-      </div>
-      <div class="field">
-        <%= f.label :major %><br>
-        <%= f.text_field :major %><br>
+        <%= f.label :schoolName %>
+        <%= f.text_field :schoolName %>
+
+        <%= f.label :bio %>
+        <%= f.text_area :bio %>
+
+        <%= f.label :photo %>
+        <%= f.file_field :photo %>
+
       </div>
       <div class="field gender-field">
         <%= f.label :gender %><br>
@@ -35,37 +39,26 @@
         <%= radio_button( 'profile', :gender, 'Male') %>
         <%= label_tag( 'Male') %><br><br>
 
+          <%= f.label :smoke %><br>
+          <%= f.check_box :smoke %>
+
+          <%= f.label :pet %><br>
+          <%= f.check_box :pet %>
+
+          <%= f.label :drive %><br>
+          <%= f.check_box :drive %>
+
+
       </div>
-      <div class="field">
-        <%= f.label :schoolName %><br>
-        <%= f.text_field :schoolName %>
-      </div>
-      <div class="field">
-        <%= f.label :smoke %><br>
-        <%= f.check_box :smoke %>
-      </div>
-      <div class="field">
-        <%= f.label :pet %><br>
-        <%= f.check_box :pet %>
-      </div>
-      <div class="field">
-        <%= f.label :drive %><br>
-        <%= f.check_box :drive %>
-      </div>
-      <div class="field">
-        <%= f.label :bio %><br>
-        <%= f.text_area :bio %>
-      </div>
+
+
       <!--<div class="field">-->
         <%#= f.label :avatar %><br>
         <!--<%#= f.text_field :avatar %>-->
       <!--</div>-->
-    <div class="field">
-      <%= f.label :photo %><br>
-      <%= f.file_field :photo %>
-    </div>
+
       <div class="actions">
         <%= f.submit %>
       </div>
-  </div>
+
 <% end %>
