--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Profile</h1>
+
+<div class="wrapper">
+  <div class="new_user">
+  <h1>New Profile</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', profiles_path %>
+    </div>
+</div>
