--- a/app/views/page/contact.html.erb
+++ b/app/views/page/contact.html.erb
@@ -1,3 +1,8 @@
+<% if params[:commit] %>
+    <%#= render "page/home" %>
+    <%# redirect_to page_home_path, notice: 'Profile was successfully created.' %>
+      <%#= render page_home_path %>
+<% end %>
 
 <div class="wrapper">
   <div class="row content-wrapper">
