--- a/app/assets/stylesheets/user_styles.scss
+++ b/app/assets/stylesheets/user_styles.scss
@@ -161,6 +161,7 @@ img { border: 0; max-width: 100%; }
   float: left;
   margin-left: 10px;
   margin-bottom: 8px;
+  width: 55%;
 }
 #userphoto img {
 
@@ -181,7 +182,7 @@ img { border: 0; max-width: 100%; }
 /** profile nav links **/
 #profiletabs {
   display: block;
-  margin-bottom: 4px;
+  margin-bottom: 10px;
   height: 50px;
 }
 
@@ -191,7 +192,7 @@ img { border: 0; max-width: 100%; }
   display: block;
   width: 70%;
   height: 50px;
-  margin-top: 35%;
+  margin-top: 30%;
   margin-left: -2.5%;
   font-size: 19px;
 }
@@ -356,4 +357,10 @@ input[type="number"].text_field
   text-align: center;
   color: red;
   font-size: 30px;
+}
+
+.img_avatar
+{
+
+  width:100%;
 }
