--- a/app/views/shared/_main_navigation.html.erb
+++ b/app/views/shared/_main_navigation.html.erb
@@ -37,7 +37,7 @@
               <% if user_signed_in? %>
                   <li>  <%= link_to 'Logout' , destroy_user_session_path, method: "delete"%></li>
               <% else %>
-                  <li><%= link_to 'Login/Singup' , new_user_session_path%></li>
+                  <li><%= link_to 'Login/Sign-Up' , new_user_session_path%></li>
               <% end %>
             </ul>
           </div>
