--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,7 +38,7 @@
 }
 
 
-#axis:hover .move-left
+/*#axis:hover .move-left
 {
     transform: translate(-900px,0);
     -webkit-transform: translate(-850px,0);
@@ -54,4 +54,34 @@
      width:20%;
      height:20%;
      float:right;
- }
+ }*/
+@keyframes moveCar {
+    0%   { left:0px; top:0px;}
+    100% { left:-900px; top:0px;}
+}
+
+#axis .move-left{
+    -webkit-animation: moveCar ;
+    -moz-animation: moveCar ;
+    position:relative;
+    -webkit-animation-duration: 2.5s;
+    -webkit-animation-timing-function: linear;
+    /*-webkit-transform: translate(-900px,0px);*/
+    /*-webkit-transition: 2s ease-in-out;*/
+    animation-iteration-count: 1;
+    -webkit-animation-iteration-count:1;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-play-state: paused;
+}
+#axis:hover .move-left{
+    -webkit-animation-play-state: running;
+}
+
+#axis
+{
+    width:20%;
+    height:20%;
+    float:right;
+    -webkit-animation-fill-mode: forwards;
+}
