--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -29,7 +29,12 @@
         <%= f.text_area :bio %>
 
         <%= f.label :photo %>
-        <%= f.file_field :photo %>
+        <!--<#%= f.file_field :photo %>-->
+            <%= f.cropbox :photo %>
+            <%= f.crop_preview :photo %>
+            <!--<#%= f.submit 'Save' %>-->
+
+
 
       </div>
       <div class="field gender-field">
